# Futaba14SGReader

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  Reader.sln  Reader.vcxproj  Reader.vcxproj.filters  build.sh
cmake/: BuildType.cmake  ProjectOptions.cmake
data/: 3DHKatana  KatanaMX  ShurikBipe
docs/: README  fut18szutil63d.xlsm  reader.vb
src/: Reader.cpp  Reader.h
